tests/auto/declarative/qsggridview/tst_qsggridview.cpp
@@ -64,7 +64,7 @@ class tst_QSGGridView : public QObject
 public:
     tst_QSGGridView();
 
-private slots:
+//private slots:
     void initTestCase();
     void cleanupTestCase();
     void items();
@@ -107,6 +107,8 @@ private slots:
     void testQtQuick11Attributes_data();
     void columnCount();
     void margins();
+private slots:
+    void creationContext();
 
 private:
     QSGView *createView();
@@ -2924,6 +2926,26 @@ void tst_QSGGridView::margins()
 
         delete canvas;
     }
+}
+
+void tst_QSGGridView::creationContext()
+{
+    QSGView canvas;
+    canvas.setGeometry(0,0,240,320);
+    canvas.setSource(QUrl::fromLocalFile(SRCDIR "/data/creationContext.qml"));
+    qApp->processEvents();
+
+    QSGItem *rootItem = qobject_cast<QSGItem *>(canvas.rootObject());
+    QVERIFY(rootItem);
+    QVERIFY(rootItem->property("count").toInt() > 0);
+
+    QSGItem *item;
+    QVERIFY(item = rootItem->findChild<QSGItem *>("listItem"));
+    QCOMPARE(item->property("text").toString(), QString("Hello!"));
+    QVERIFY(item = rootItem->findChild<QSGItem *>("header"));
+    QCOMPARE(item->property("text").toString(), QString("Hello!"));
+    QVERIFY(item = rootItem->findChild<QSGItem *>("footer"));
+    QCOMPARE(item->property("text").toString(), QString("Hello!"));
 }
 
 QSGView *tst_QSGGridView::createView()
